@startuml

title __VALIDATION's Class Diagram__\n

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          interface edu.tanta.fci.reoil.user.validation.PasswordConfirmed {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          class edu.tanta.fci.reoil.user.validation.PasswordConfirmedValidator {
              ~ logger : Logger
              + isValid()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          interface edu.tanta.fci.reoil.user.validation.PasswordPolicy {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          class edu.tanta.fci.reoil.user.validation.PasswordPolicyValidator {
              {static} - MAX_REPETATIVE_CHARS : int
              {static} - MIN_COMPLEX_RULES : int
              {static} - MIN_DIGIT_CASE_CHARS : int
              {static} - MIN_LOWER_CASE_CHARS : int
              {static} - MIN_SPECIAL_CASE_CHARS : int
              {static} - MIN_UPPER_CASE_CHARS : int
              + isValid()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          interface edu.tanta.fci.reoil.user.validation.UniqueEmail {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          class edu.tanta.fci.reoil.user.validation.UniqueEmailValidator {
              + UniqueEmailValidator()
              + isValid()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          interface edu.tanta.fci.reoil.user.validation.UniqueUsername {
              {abstract} + groups()
              {abstract} + message()
              {abstract} + payload()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace validation {
          class edu.tanta.fci.reoil.user.validation.UniqueUsernameValidator {
              + UniqueUsernameValidator()
              + isValid()
          }
        }
      }
    }
  }
  

  edu.tanta.fci.reoil.user.validation.PasswordConfirmedValidator .up.|> jakarta.validation.ConstraintValidator
  edu.tanta.fci.reoil.user.validation.PasswordPolicyValidator .up.|> jakarta.validation.ConstraintValidator
  edu.tanta.fci.reoil.user.validation.UniqueEmailValidator .up.|> jakarta.validation.ConstraintValidator
  edu.tanta.fci.reoil.user.validation.UniqueEmailValidator o-- edu.tanta.fci.reoil.repositories.UserRepository : repository
  edu.tanta.fci.reoil.user.validation.UniqueUsernameValidator .up.|> jakarta.validation.ConstraintValidator
  edu.tanta.fci.reoil.user.validation.UniqueUsernameValidator o-- edu.tanta.fci.reoil.repositories.UserRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
